force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Authorization__c/ArdiraSurvey__Survey_Workflow_Authorization__c.object-meta.xml
<CustomObject>
    <description>This object stores information about authorizations at various stages of a survey.</description>
    <label>Ardira Survey Workflow Authorization</label>
    <nameField>
        <displayFormat>{YYYY}-{000000000}</displayFormat>
        <label>Survey Workflow Authorization Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ardira Survey Workflow Authorizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>