force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Authorization__c/fields/ArdiraSurvey__Access_Level__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Access_Level__c</fullName>
    <defaultValue>&quot;View Only&quot;</defaultValue>
    <description>Access level granted by this authorization.</description>
    <inlineHelpText>Access level granted by this authorization.</inlineHelpText>
    <label>Access Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>View Only</fullName>
                <default>true</default>
                <label>View Only</label>
            </value>
            <value>
                <fullName>View and Update Only</fullName>
            </value>
            <value>
                <fullName>View, Update, and Submit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>