force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Authorization__c/fields/ArdiraSurvey__Related_User_Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Related_User_Field_Api_Name__c</fullName>
    <description>API name of the user lookup field on a related object of survey result referencing the user resource that is being authorized for the survey result.</description>
    <inlineHelpText>API name of the user lookup field on a related object of survey result referencing the user resource that is being authorized for the survey result.</inlineHelpText>
    <label>Related User Field Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>