force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Authorization__c/fields/ArdiraSurvey__Related_User_Target_Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Related_User_Target_Field_Api_Name__c</fullName>
    <description>API name of the lookup field of a related object in survey result containing a reference to the user resource that is being authorized for the survey result.</description>
    <inlineHelpText>API name of the lookup field of a related object in survey result containing a reference to the user resource that is being authorized for the survey result.</inlineHelpText>
    <label>Related User Target Field Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>