force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Authorization__c/fields/ArdiraSurvey__Resource_Group__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Resource_Group__c</fullName>
    <description>Name of group resource that is being authorized for the survey result.</description>
    <inlineHelpText>Name of group resource that is being authorized for the survey result.</inlineHelpText>
    <label>Resource Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>