force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Authorization__c/fields/ArdiraSurvey__Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Resource_Id__c</fullName>
    <description>Id of resource that is being authorized for the survey result.</description>
    <inlineHelpText>Identifier of the resource being authorized for access to the survey result.</inlineHelpText>
    <label>Resource Id</label>
    <length>225</length>
    <type>Text</type>
</CustomField>