force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Authorization__c/fields/ArdiraSurvey__Resource_User__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Resource_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of user resource that is being authorized for the survey result.</description>
    <inlineHelpText>Id of user resource that is being authorized for the survey result.</inlineHelpText>
    <label>Resource User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ardira_Survey_Workflow_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>