force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Authorization__c/fields/ArdiraSurvey__Survey__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey__c</fullName>
    <description>Workflow authorizations is for a result of this survey.</description>
    <inlineHelpText>Workflow authorizations is for a result of this survey.</inlineHelpText>
    <label>Survey</label>
    <referenceTo>ArdiraSurvey__Survey__c</referenceTo>
    <relationshipLabel>Survey Workflow Authorizations</relationshipLabel>
    <relationshipName>Survey_Workflow_Authorizations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>