force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Authorization__c/fields/ArdiraSurvey__Survey_Result__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Authorization applies to this survey result.</description>
    <inlineHelpText>Authorization applies to this survey result.</inlineHelpText>
    <label>Survey Result</label>
    <referenceTo>ArdiraSurvey__Survey_Result__c</referenceTo>
    <relationshipLabel>Ardira Survey Workflow Authorizations</relationshipLabel>
    <relationshipName>Ardira_Survey_Workflow_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>