force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Authorization__c/fields/ArdiraSurvey__Survey_Workflow_Stage__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey_Workflow_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Authorization applies to this workflow stage of the survey.</description>
    <inlineHelpText>Authorization applies to this workflow stage of the survey.</inlineHelpText>
    <label>Survey Workflow Stage</label>
    <referenceTo>ArdiraSurvey__Survey_Workflow_Stage__c</referenceTo>
    <relationshipLabel>Survey Workflow Authorizations</relationshipLabel>
    <relationshipName>Survey_Workflow_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>