force-app/main/default/objects/ArdiraSurvey__Survey_Workflow_Authorization__c/fields/ArdiraSurvey__Type__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Type__c</fullName>
    <defaultValue>&quot;User&quot;</defaultValue>
    <description>Type of resource that is being authorized for the survey result.</description>
    <inlineHelpText>Type of resource that is being authorized for the survey result.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
                <default>true</default>
                <label>User</label>
            </value>
            <value>
                <fullName>Public Group</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Related User</fullName>
            </value>
            <value>
                <fullName>Related User by Email</fullName>
            </value>
            <value>
                <fullName>Related User by Lookup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>